[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8.0"
bitflags = "1.3.2"
array-macro = { path = "../dep/array-macro" }
zerocopy = "0.6.0"
spin = "0.9.2"
xmas-elf = "0.8.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
# fat32 = { path = "../fat32" }
runfs = { path = "../../runfs" }
log = { path = "../dep/log" }
fdt = { path = "../dep/fdt" }
owo-colors = { path = "../dep/owo-colors" }

[features]
platform-k210 = []
platform-qemu = []
opensbi = []
rustsbi = []
# [bin]
# proc-macro = true
