[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8.0"
spin = {version = "0.9.2", default-features = true, features = ["spin_mutex"]}
bitflags = "1.3.2"
xmas-elf = "0.8.0"

[features]
board_qemu = []
board_k210 = []
virt_mem = []
sbi = []
